--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
                 <hr>
                 <span class="isebb">Intermediate and Secondary Education Boards Bangladesh</span>
-                <span>Official Website of Education Board</span>
+                <span class="link">Official Website of Education Board</span>
             </div>
         </div>
         <div class="result"></div>
