Result Design Complete

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.cdnfonts.com/css/arial-2" rel="stylesheet" />
   </head>
   <body>
+    <!-- Heading Part -->
     <div class="app">
       <div class="header">
         <div class="logo">
@@ -30,8 +31,121 @@
           <span class="link">Official Website of Education Board</span>
         </div>
       </div>
-      <div class="result"></div>
+      <!-- Reseult form deign -->
+      <div class="result">
+        <div class="result_data">
+        <table>
+          <tbody>
+            <tr> 
+              <td>
+                <label class="result_title">Examination</label>
+              </td>
+              <td>
+              <span>:</span>
+              </td>
+              <td>
+                <select name="exam-name" id="exam-name">
+                  <option value="ssc">SSC/Dakhil/Equivalent</option>
+                  <option value="jsc">JSC/JDC</option>
+                  <option value="ssc">SSC/Dakhil</option>
+                  <option value="ssc_voc">SSC(Vocational)</option>
+                  <option value="hsc">HSC/Alim</option>
+                  <option value="hsc_voc">HSC(Vocational)</option>
+                  <option value="hsc_hbm">HSC(BM)</option>
+                  <option value="hsc_dic">Diploma in Commerce</option>
+                  <option value="hsc">Diploma in Business Studies</option>
+                </select>
+              </td>
+            </tr>
+            <tr> 
+              <td>
+                <label class="result_title">Year</label>
+              </td>
+              <td>
+              <span>:</span>
+              </td>
+              <td>
+                <select name="year" id="year">
+                  <option value="ssc">SSC/Dakhil/Equivalent</option>
+                  <option value="jsc">JSC/JDC</option>
+                  <option value="ssc">SSC/Dakhil</option>
+                  <option value="ssc_voc">SSC(Vocational)</option>
+                  <option value="hsc">HSC/Alim</option>
+                  <option value="hsc_voc">HSC(Vocational)</option>
+                  <option value="hsc_hbm">HSC(BM)</option>
+                  <option value="hsc_dic">Diploma in Commerce</option>
+                  <option value="hsc">Diploma in Business Studies</option>
+                </select>
+              </td>
+            </tr>
+            <tr> 
+              <td>
+                <label class="result_title">Board</label>
+              </td>
+              <td>
+              <span>:</span>
+              </td>
+              <td>
+                <select name="board-name" id="board-name">
+                  <option value="ssc">SSC/Dakhil/Equivalent</option>
+                  <option value="jsc">JSC/JDC</option>
+                  <option value="ssc">SSC/Dakhil</option>
+                  <option value="ssc_voc">SSC(Vocational)</option>
+                  <option value="hsc">HSC/Alim</option>
+                  <option value="hsc_voc">HSC(Vocational)</option>
+                  <option value="hsc_hbm">HSC(BM)</option>
+                  <option value="hsc_dic">Diploma in Commerce</option>
+                  <option value="hsc">Diploma in Business Studies</option>
+                </select>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <label class="result_title">Roll</label>
+              </td>
+            <td>
+              <span>:</span>
+            </td>
+            <td>
+              <input id="roll" type="text">
+            </td>
+            </tr>
+            <tr>
+              <td>
+                <label class="result_title">Reg: No</label>
+              </td>
+            <td>
+              <span>:</span>
+            </td>
+            <td>
+              <input id="reg" type="text">
+            </td>
+            </tr>
+            <tr>
+              <td>
+                <label class="result_title"><span>7</span>+<span>8</span></label>
+              </td>
+            <td>
+              <span>=</span>
+            </td>
+            <td>
+              <input id="captcha" type="text">
+            </td>
+            </tr>
+            <tr>
+              <td>&puncsp;</td>
+              <td>&puncsp;</td>
+              <td align="right" class="btn">
+                <button>Reset</button>
+                <button>Submit</button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
       <div class="footer"></div>
-    </div>
+      </div>
+      <!-- Footer Design -->
   </body>
 </html>
